# radbot

./: .gitattributes  .gitignore  MANIFEST.in  README.md  __init__.py  linux_launch.sh  linux_setup.sh  macos_launch.sh  macos_setup.sh  main.py  pyproject.toml  requirements-hashed.txt  requirements.txt  resources.qrc  setup_and_run.bat  setup_env.ps1  setup_env.sh  version.py  windows_launch.bat  windows_setup.bat
config/: advanced_config.json  advanced_config.py  app_config.py  build_fee_native.py  champion_dna.json  config_loader.py  database_config.py  fee_config.py  fee_native.pyx  indicator_defaults.json  paths.py  service_config.py  start_default_indicators.json
constants/: __init__.py  strategy_types.py
core/: __init__.py  manifest_builder.py  radix_network.py  transaction_builder.py  wallet.py
data/: radbot.db
database/: ai_strategy_manager.py  balance_manager.py  database.py  pool_manager.py  price_history_manager.py  settings.py  statistics_manager.py  tokens.py  trade_manager.py  trade_pairs.py  wallets.py
docs/: __init__.py  advanced_features.md  faq.md  getting_started.md  indicator_settings.md  trade_pairs.md  trading_strategies.md  wallet_management.md
gui/: active_trades_delete_page.py  active_trades_edit_page.py  active_trades_gui.py  active_trades_info_page.py  active_trades_ui.py  available_pair_widget.py  background_worker.py  balance_poller.py  create_trade_gui.py  create_trade_ui.py  dashboard_gui.py  dashboard_ui.py  help_gui.py  help_ui.py  indicators_gui.py  indicators_ui.py  main_window.py  main_window_ui.py  overlapping_icon_widget.py  selectable_trade_pair_widget.py  splash_screen.py  strategy_edit_helpers.py  trade_history_gui.py  trade_history_ui.py  trade_pairs_gui.py  wallet_gui.py  wallet_helpers.py  wallet_ui.py
images/: __init__.py
indicators/: __init__.py  ai_indicator.py  atr.py  bollinger_bands.py  enhanced_ai_indicator.py  ichimoku.py  macd.py  market_regime.py  moving_average_crossover.py  obv.py  ping_pong.py  roc.py  rsi.py  stochastic_rsi.py
libs/: README.md  __init__.py
models/: data_models.py
security/: __init__.py  dependency_check.py  dependency_guard.py  known_good_packages.json  startup_check.py
services/: ai_backtest_service.py  ai_optimization_service.py  ai_strategy_service.py  astrolescent_price_service.py  dashboard_service.py  data_source.py  pair_price_history_service.py  qt_base_service.py  qt_icon_cache_service.py  qt_price_history_service.py  qt_ui_refresh_service.py  route_checker.py  service_coordinator.py  signal_generator.py  task_coordinator.py  (+7 more)
(+26 files in other folders)
