[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radbot"
version = "1.0.18"
description = "Radix Aggregated DEX Trading Bot"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Akond Ltd"},
]
keywords = ["radix", "dex", "trading", "bot", "defi", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "PySide6>=6.6",
    "requests>=2.31",
    "aiohttp>=3.9",
    "async-timeout>=4.0",
    "aiolimiter>=1.1",
    "numpy>=2.0",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "mplfinance>=0.12.10b0",
    "cryptography>=42.0",
    "radix-engine-toolkit>=2.2",
    "mnemonic>=0.21",
    "bip_utils>=2.9",
    "cairocffi>=1.6",
    "segno>=1.4",
    "qrcode-artistic>=3.0",
    "pillow>=10.0",
    "nocairosvg>=2024",
    "Cython>=3.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://radixtalk.com/"
Repository = "https://github.com/AkondLtd/radbot"
Issues = "https://github.com/AkondLtd/radbot/issues"

[project.scripts]
radbot = "main:main"

[project.gui-scripts]
radbot-gui = "main:main"

[tool.setuptools]
py-modules = ["main", "version"]

[tool.setuptools.packages.find]
include = [
    "core*",
    "config*",
    "constants*",
    "data*",
    "database*",
    "docs*",
    "gui*",
    "images*",
    "indicators*",
    "libs*",
    "models*",
    "security*",
    "services*",
    "utils*",
]
exclude = [
    "venv*",
    "thimblefairy*",
    "wtahtaw*",
    "__pycache__*",
    "*.pyc",
    "config.old*",
]

[tool.setuptools.package-data]
"gui" = ["styling/*.qss"]
"images" = ["*.png", "*.gif", "*.ico", "icons/**/*.png", "qr/README.md"]
"docs" = ["*.md"]
"config" = ["*.json", "*.txt"]
"libs" = ["*.dll", "*.so", "*.dylib", "README.md", "lgpl-2.1.txt"]
"security" = ["*.json"]
